Fix bug with collapsed menus

--- a/sass/components/cms-menu/_cms-menu.scss
+++ b/sass/components/cms-menu/_cms-menu.scss
@@ -121,6 +121,7 @@
         &.children {
           &.current {
             > a {
+              color: currentColor;
               background: transparent none;
             }
           }
@@ -169,6 +170,7 @@
       }
     }
 
+    // Hide the bottom panel
     .cms-panel-toggle.south {
       display: none;
     }
